--- a/CodeCademy/excursion/index.html
+++ b/CodeCademy/excursion/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8" content>
+        <meta http-equiv="X-UA-Compatible" content='IE=edge'>
         <link href='/CodeCademy/excursion/styles.css' type=text/css rel='stylesheet' >
     </head>
     <body>
@@ -26,3 +26,7 @@
 
     </body>
 </html>
+
+git remote add origin https://github.com/janamedia/excursion-project.git
+git branch -M main
+git push -u origin main
