--- a/CodeCademy/excursion/index.html
+++ b/CodeCademy/excursion/index.html
@@ -2,24 +2,24 @@
 <html>
     <head>
         <meta http-equiv="X-UA-Compatible" content='IE=edge'>
-        <link href='excursion-project/CodeCademy/excursion/styles.css' type=text/css rel='stylesheet' >
+        <link href='https://janamedia.github.io/excursion-project/CodeCademy/excursion/styles.css' type=text/css rel='stylesheet' >
     </head>
     <body>
         <header>
             <h1>Discover hidden places in the world around you</h1>
         </header>
         <video autoplay="" muted="" loop="">
-            <source src="excursion-project/CodeCademy/excursion/Resources/excursion.mp4" type="video/mp4">
+            <source src="https://janamedia.github.io/excursion-project/CodeCademy/excursion/Resources/excursion.mp4" type="video/mp4">
         </video>
 
-        <a href='excursion-project/CodeCademy/excursion/index.html'>Download Excursion (Comming soon!)</a>
+        <a href='https://janamedia.github.io/excursion-project/CodeCademy/excursion/index.html'>Download Excursion (Comming soon!)</a>
 
           <h2>Your personal travel guide</h2>
           <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-          <p><img src="excursion-project/CodeCademy/excursion/Resources/camp.webp" alt="Image of camp"></p>
-          <p><img src='excursion-project/CodeCademy/excursion/Resources/phone.webp' alt=''></p>
+          <p><img src="https://janamedia.github.io/excursion-project/CodeCademy/excursion/Resources/camp.webp" alt="Image of camp"></p>
+          <p><img src='https://janamedia.github.io/excursion-project/CodeCademy/excursion/Resources/phone.webp' alt=''></p>
           <h2>Comming Soon for iPhone and Android</h2>
-          <a href='excursion-project/CodeCademy/excursion/index'>Download Excursion (Coming soon!)</a>
+          <a href='https://janamedia.github.io/excursion-project/CodeCademy/excursion/index'>Download Excursion (Coming soon!)</a>
 
 
 
